@@ -18,6 +18,17 @@ else {
                 <img src="<?php echo $theme->getPath(); ?>/img/button.png" id="footerLogo" alt="Powered by NOCC" />
             </a>
         </div>
+<?php
+if (NOCC_DEBUG_LEVEL > 0) {
+    define('NOCC_END_TIME', microtime(true));
+
+    $time = NOCC_END_TIME - NOCC_START_TIME;
+    $usage = memory_get_usage() / 1024;
+    $peakUsage = memory_get_peak_usage() / 1024;
+
+    printf('<p class="debug">Time: <strong>%.2f sec</strong> - Memory Usage: <strong>%.2f KB</strong> - Memory Peak Usage: <strong>%.2f KB</strong></p>', $time, $usage, $peakUsage);
+}
+?>
     </body>
 </html>
 <?php
